# django-fixture-magic

./: pyproject.toml  tox.ini
.github/workflows/: publish.yml  tests.yml
