[project]
name = "django-fixture-magic"
description = "A few extra management tools to handle fixtures."
authors = [
    { name: "Dave Dash", email="dd+pypi@davedash.com"}
]
license = {file = LICENSE}
readmd = "README.rst"
requires-python = ">= 2.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "future==0.15.2"
]


[project.optional-dependencies]
test= [
    "pytest==2.3.5"
    "pytest-cov==1.6"
]


[project.urls]
    documentation = http://github.com/davedash/django-fixture-magic
    homepage = http://github.com/davedash/django-fixture-magic
    repository = http://github.com/davedash/django-fixture-magic
    tracker = http://github.com/davedash/django-fixture-magic/issues


[build-system]
requires = ["setuptools", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "fixture_magic/_version.py"
git_describe_command = "git describe --dirty --tags --long --match v* --first-parent"